src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void Octree_Delete(void* self);
extern "C" __declspec(dllexport) void* Octree_createWithDepth_0(int maxDepth, double size, void* origin, bool withColors);
extern "C" __declspec(dllexport) void* Octree_createWithDepth_1(int maxDepth, void* pointCloud, void* colors);
extern "C" __declspec(dllexport) void* Octree_createWithResolution_0(double resolution, double size, void* origin, bool withColors);
extern "C" __declspec(dllexport) void* Octree_createWithResolution_1(double resolution, void* pointCloud, void* colors);
extern "C" __declspec(dllexport) bool Octree_insertPoint_0(void* self, void* point, void* color);
extern "C" __declspec(dllexport) bool Octree_isPointInBound_0(void* self, void* point);
extern "C" __declspec(dllexport) bool Octree_empty_0(void* self);
extern "C" __declspec(dllexport) void Octree_clear_0(void* self);
extern "C" __declspec(dllexport) bool Octree_deletePoint_0(void* self, void* point);
extern "C" __declspec(dllexport) void Octree_getPointCloudByOctree_0(void* self, void* restoredPointCloud, void* restoredColor);
extern "C" __declspec(dllexport) int Octree_radiusNNSearch_0(void* self, void* query, float radius, void* points, void* squareDists);
extern "C" __declspec(dllexport) int Octree_radiusNNSearch_1(void* self, void* query, float radius, void* points, void* colors, void* squareDists);
extern "C" __declspec(dllexport) void Octree_KNNSearch_0(void* self, void* query, int K, void* points, void* squareDists);
extern "C" __declspec(dllexport) void Octree_KNNSearch_1(void* self, void* query, int K, void* points, void* colors, void* squareDists);
extern "C" __declspec(dllexport) void Odometry_Delete(void* self);
extern "C" __declspec(dllexport) void* Odometry_New_0();
extern "C" __declspec(dllexport) void* Odometry_New_1(int otype);
extern "C" __declspec(dllexport) void* Odometry_New_2(int otype, void* settings, int algtype);
extern "C" __declspec(dllexport) void Odometry_prepareFrame_0(void* self, void* frame);
extern "C" __declspec(dllexport) void Odometry_prepareFrames_0(void* self, void* srcFrame, void* dstFrame);
extern "C" __declspec(dllexport) bool Odometry_compute_0(void* self, void* srcFrame, void* dstFrame, void* Rt);
extern "C" __declspec(dllexport) bool Odometry_compute_1(void* self, void* srcDepth, void* dstDepth, void* Rt);
extern "C" __declspec(dllexport) bool Odometry_compute_2(void* self, void* srcDepth, void* srcRGB, void* dstDepth, void* dstRGB, void* Rt);
extern "C" __declspec(dllexport) void* Odometry_getNormalsComputer_0(void* self);
extern "C" __declspec(dllexport) void OdometryFrame_Delete(void* self);
extern "C" __declspec(dllexport) void* OdometryFrame_New_0(void* depth, void* image, void* mask, void* normals);
extern "C" __declspec(dllexport) void OdometryFrame_getImage_0(void* self, void* image);
extern "C" __declspec(dllexport) void OdometryFrame_getGrayImage_0(void* self, void* image);
extern "C" __declspec(dllexport) void OdometryFrame_getDepth_0(void* self, void* depth);
extern "C" __declspec(dllexport) void OdometryFrame_getProcessedDepth_0(void* self, void* depth);
extern "C" __declspec(dllexport) void OdometryFrame_getMask_0(void* self, void* mask);
extern "C" __declspec(dllexport) void OdometryFrame_getNormals_0(void* self, void* normals);
extern "C" __declspec(dllexport) int OdometryFrame_getPyramidLevels_0(void* self);
extern "C" __declspec(dllexport) void OdometryFrame_getPyramidAt_0(void* self, void* img, int pyrType, size_t level);
extern "C" __declspec(dllexport) void OdometrySettings_Delete(void* self);
extern "C" __declspec(dllexport) void* OdometrySettings_New_0();
extern "C" __declspec(dllexport) void OdometrySettings_setCameraMatrix_0(void* self, void* val);
extern "C" __declspec(dllexport) void OdometrySettings_getCameraMatrix_0(void* self, void* val);
extern "C" __declspec(dllexport) void OdometrySettings_setIterCounts_0(void* self, void* val);
extern "C" __declspec(dllexport) void OdometrySettings_getIterCounts_0(void* self, void* val);
extern "C" __declspec(dllexport) void OdometrySettings_setMinDepth_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMinDepth_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMaxDepth_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMaxDepth_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMaxDepthDiff_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMaxDepthDiff_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setMaxPointsPart_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getMaxPointsPart_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setSobelSize_0(void* self, int val);
extern "C" __declspec(dllexport) int OdometrySettings_getSobelSize_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setSobelScale_0(void* self, double val);
extern "C" __declspec(dllexport) double OdometrySettings_getSobelScale_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setNormalWinSize_0(void* self, int val);
extern "C" __declspec(dllexport) int OdometrySettings_getNormalWinSize_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setNormalDiffThreshold_0(void* self, float val);
extern "C" __declspec(dllexport) float OdometrySettings_getNormalDiffThreshold_0(void* self);
extern "C" __declspec(dllexport) void OdometrySettings_setNormalMethod_0(void* self, void* nm);
extern "C" __declspec(dllexport) void* OdometrySettings_getNormalMethod_0(void* self);