src/OpenCV5Sharp/Generated/NativeMethods.Ptcloud.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Octree_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Octree_createWithDepth_0(int maxDepth, double size, IntPtr origin, [MarshalAs(UnmanagedType.U1)] bool withColors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Octree_createWithDepth_1(int maxDepth, MatHandle pointCloud, IntPtr colors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Octree_createWithResolution_0(double resolution, double size, IntPtr origin, [MarshalAs(UnmanagedType.U1)] bool withColors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Octree_createWithResolution_1(double resolution, MatHandle pointCloud, IntPtr colors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Octree_insertPoint_0(OctreeHandle self, IntPtr point, IntPtr color);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Octree_isPointInBound_0(OctreeHandle self, IntPtr point);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Octree_empty_0(OctreeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Octree_clear_0(OctreeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Octree_deletePoint_0(OctreeHandle self, IntPtr point);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Octree_getPointCloudByOctree_0(OctreeHandle self, MatHandle restoredPointCloud, IntPtr restoredColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Octree_radiusNNSearch_0(OctreeHandle self, IntPtr query, float radius, MatHandle points, IntPtr squareDists);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Octree_radiusNNSearch_1(OctreeHandle self, IntPtr query, float radius, MatHandle points, MatHandle colors, MatHandle squareDists);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Octree_KNNSearch_0(OctreeHandle self, IntPtr query, int K, MatHandle points, IntPtr squareDists);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Octree_KNNSearch_1(OctreeHandle self, IntPtr query, int K, MatHandle points, MatHandle colors, MatHandle squareDists);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Odometry_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Odometry_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Odometry_New_1(int otype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Odometry_New_2(int otype, OdometrySettingsHandle settings, int algtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Odometry_prepareFrame_0(OdometryHandle self, OdometryFrameHandle frame);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Odometry_prepareFrames_0(OdometryHandle self, OdometryFrameHandle srcFrame, OdometryFrameHandle dstFrame);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Odometry_compute_0(OdometryHandle self, OdometryFrameHandle srcFrame, OdometryFrameHandle dstFrame, MatHandle Rt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Odometry_compute_1(OdometryHandle self, MatHandle srcDepth, MatHandle dstDepth, MatHandle Rt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Odometry_compute_2(OdometryHandle self, MatHandle srcDepth, MatHandle srcRGB, MatHandle dstDepth, MatHandle dstRGB, MatHandle Rt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Odometry_getNormalsComputer_0(OdometryHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OdometryFrame_New_0(IntPtr depth, IntPtr image, IntPtr mask, IntPtr normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getImage_0(OdometryFrameHandle self, MatHandle image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getGrayImage_0(OdometryFrameHandle self, MatHandle image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getDepth_0(OdometryFrameHandle self, MatHandle depth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getProcessedDepth_0(OdometryFrameHandle self, MatHandle depth);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getMask_0(OdometryFrameHandle self, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getNormals_0(OdometryFrameHandle self, MatHandle normals);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OdometryFrame_getPyramidLevels_0(OdometryFrameHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometryFrame_getPyramidAt_0(OdometryFrameHandle self, MatHandle img, int pyrType, long level);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OdometrySettings_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setCameraMatrix_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_getCameraMatrix_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setIterCounts_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_getIterCounts_0(OdometrySettingsHandle self, MatHandle val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMinDepth_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMinDepth_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMaxDepth_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMaxDepth_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMaxDepthDiff_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMaxDepthDiff_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setMaxPointsPart_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getMaxPointsPart_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setSobelSize_0(OdometrySettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OdometrySettings_getSobelSize_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setSobelScale_0(OdometrySettingsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double OdometrySettings_getSobelScale_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setNormalWinSize_0(OdometrySettingsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OdometrySettings_getNormalWinSize_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setNormalDiffThreshold_0(OdometrySettingsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float OdometrySettings_getNormalDiffThreshold_0(OdometrySettingsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void OdometrySettings_setNormalMethod_0(OdometrySettingsHandle self, int nm);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OdometrySettings_getNormalMethod_0(OdometrySettingsHandle self);
